# face-cards

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ExpandableMenus.qml  README.md  Style.qml  assets.qrc  feature_store.cpp  feature_store.h  images.qrc  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
conan/: conanfile.txt  conanprofile.linux  conanprofile.m1  conanprofile.mac
video/: engine.cpp  engine.h  media_controller.cpp  media_controller.h  people_card.h  picture.h  picture_factory.h  picture_generator.h  play_controller.cpp  play_controller.h  utils.cpp  utils.h  video_context.cpp  video_context.h  video_picture.h  window.cpp  window.h
